# worksmart-ai_coach

./: .env.example  .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  WorkSmart-AI-Coach-v1.0.0.dmg  article.md  build_dmg.sh  build_mac_app.py  create_mac_installer.sh  create_simple_app.sh  demo_ai_coach.py  install.sh  pyproject.toml  quick_install.sh  requirements.txt  setup.sh  test_final_consolidated.py  test_install.py  validate_package.py
Formula/: worksmart-ai-coach.rb
worksmart_ai_coach/: __init__.py
worksmart_ai_coach/bridge/: __init__.py  java_bridge.py
worksmart_ai_coach/cli/: __init__.py  bridge.py  launcher.py  main.py
worksmart_ai_coach/core/: __init__.py  adaptive_learning.py  ai_coach.py  coach.py  context_tracker.py  micro_interventions.py  personalized_coach.py  telemetry.py  telemetry_system.py  worksmart_reader.py
worksmart_ai_coach/launchers/: __init__.py  enhanced.py
