[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worksmart-ai-coach"
version = "1.0.0"
description = "AI-powered productivity coaching for WorkSmart tracker"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WorkSmart AI Team", email = "support@worksmart.ai"},
]
keywords = ["productivity", "ai", "coaching", "worksmart", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    "anthropic>=0.35.0",
    "pynput>=1.7.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "click>=8.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
dotnet = [
    "pythonnet>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/crossover-io/worksmart-ai-coach"
Documentation = "https://github.com/crossover-io/worksmart-ai-coach#readme"
Repository = "https://github.com/crossover-io/worksmart-ai-coach.git"
"Bug Tracker" = "https://github.com/crossover-io/worksmart-ai-coach/issues"

[project.scripts]
worksmart-ai-coach = "worksmart_ai_coach.cli.main:cli"
wsai = "worksmart_ai_coach.cli.main:cli"
worksmart-coach = "worksmart_ai_coach.cli.launcher:launch"
worksmart-enhanced = "worksmart_ai_coach.launchers.enhanced:main"
worksmart-bridge = "worksmart_ai_coach.cli.bridge:main"

[tool.setuptools]
packages = ["worksmart_ai_coach", "worksmart_ai_coach.core", "worksmart_ai_coach.cli", "worksmart_ai_coach.bridge", "worksmart_ai_coach.launchers"]

[tool.setuptools.package-data]
worksmart_ai_coach = ["data/*.json", "data/*.md", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"